[package]
name = "evm_hot_wallet"
version = "0.1.0"
edition = "2021"

# This project can be used as both a library and a binary
[lib]
name = "evm_hot_wallet"
path = "src/lib.rs"

[[bin]]
name = "evm_hot_wallet"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = "0.7"
redb = "2.0"
alloy = { version = "0.1", features = ["full", "signer-mnemonic"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
bip39 = "2.0"
hex = "0.4"
thiserror = "1.0"
futures = "0.3.31"
async-trait = "0.1.89"

[dev-dependencies]
tempfile = "3.23.0"
wiremock = "0.5"
